All endpoints have been create. Missing Google Oauth + final details (chat notifications and other notifications)