@@ -1,73 +1,87 @@
 package com.socialmedia.backend.services;
+
 import com.socialmedia.backend.dtos.CommentDTO.CommentRequest;
 import com.socialmedia.backend.dtos.CommentDTO.CommentResponse;
-import com.socialmedia.backend.dtos.CommentDTO;
 import com.socialmedia.backend.entities.Comment;
 import com.socialmedia.backend.entities.Post;
 import com.socialmedia.backend.repositories.CommentRepository;
 import com.socialmedia.backend.repositories.PostRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class CommentService {
 
     private final CommentRepository commentRepository;
     private final PostRepository postRepository;
 
-    public CommentService(CommentRepository commentRepository, PostRepository postRepository) {
-        this.commentRepository = commentRepository;
-        this.postRepository = postRepository;
-    }
+    public CommentResponse addComment(Long postId, CommentRequest request) {
 
-    public CommentDTO.CommentResponse addComment(Long postId, CommentDTO.CommentRequest request) {
+        if (request.getContent() == null || request.getContent().isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Comment cannot be empty");
+        }
+
         Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Post not found"));
 
-        Comment comment = new Comment();
-
-        comment.setContent(request.getContent());
-        comment.setPost(post);
+        Comment comment = Comment.builder()
+                .content(request.getContent())
+                .post(post)
+                .createdDate(LocalDateTime.now())
+                .build();
 
         Comment saved = commentRepository.save(comment);
+
         return toResponse(saved);
     }
 
     public List<CommentResponse> getCommentsByPost(Long postId) {
+
+        if (!postRepository.existsById(postId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Post not found");
+        }
+
         return commentRepository.findByPostPostId(postId)
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private CommentResponse toResponse(Comment comment) {
-        CommentResponse res = new CommentResponse();
-        res.setId(comment.getCommentId());
-        res.setContent(comment.getContent());
-        res.setPostId(comment.getPost().getPostId());
-        return res;
+    public CommentResponse getCommentById(Long postId, Long commentId) {
+
+        Comment comment = commentRepository.findById(commentId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Comment not found"));
+
+        if (!comment.getPost().getPostId().equals(postId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Comment does not belong to this post");
+        }
+
+        return toResponse(comment);
     }
 
     public void deleteComment(Long postId, Long commentId) {
+
         Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new RuntimeException("Comment not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Comment not found"));
 
         if (!comment.getPost().getPostId().equals(postId)) {
-            throw new RuntimeException("Comment does not belong to this post");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Comment does not belong to this post");
         }
 
         commentRepository.delete(comment);
     }
-    public CommentResponse getCommentById(Long postId, Long commentId) {
-        Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new RuntimeException("Comment not found"));
 
-        if (!comment.getPost().getPostId().equals(postId)) {
-            throw new RuntimeException("Comment does not belong to this post");
-        }
-
-        return toResponse(comment);
+    private CommentResponse toResponse(Comment comment) {
+        return CommentResponse.builder()
+                .id(comment.getCommentId())
+                .content(comment.getContent())
+                .postId(comment.getPost().getPostId())
+                .build();
     }
 }
